--- a/manifest.json
+++ b/manifest.json
@@ -66,7 +66,8 @@
             "waiting" : true
         },
         "statusbar" : {
-            "immersed" : "supportedDevice"
+            // "immersed" : "supportedDevice",
+			"immersed" : false
         },
         "popGesture" : "close",
         /*设置应用默认侧滑返回关闭Webview窗口，"none"为无侧滑返回功能，"hide"为侧滑隐藏Webview窗口。参考http://ask.dcloud.net.cn/article/102*/
@@ -257,5 +258,5 @@
         }
     },
     "screenOrientation" : [ "portrait-primary" ],
-    "fullscreen" : true
+    "fullscreen" : false
 }
