修改应用名

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "@platforms" : [ "android", "iPhone", "iPad" ],
     "id" : "__W2A__197795.xyz",
     /*应用的标识，创建应用时自动生成，勿手动修改*/
-    "name" : "jihad_web2app",
+    "name" : "星空影城",
     /*应用名称，程序桌面图标名称*/
     "version" : {
         "name" : "1.0",
@@ -67,7 +67,7 @@
         },
         "statusbar" : {
             // "immersed" : "supportedDevice",
-			"immersed" : false
+            "immersed" : false
         },
         "popGesture" : "close",
         /*设置应用默认侧滑返回关闭Webview窗口，"none"为无侧滑返回功能，"hide"为侧滑隐藏Webview窗口。参考http://ask.dcloud.net.cn/article/102*/
